--- a/pom.xml
+++ b/pom.xml
@@ -4,10 +4,9 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ru.flexify</groupId>
+    <groupId>io.flexify</groupId>
     <artifactId>flexify-manage-api-client-sample</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>2.4.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -19,10 +18,8 @@
         <dependency>
             <groupId>io.flexify</groupId>
             <artifactId>management-apiclient</artifactId>
-            <version>2.4.0</version>
+            <version>2.4.1</version>
             <scope>compile</scope>
         </dependency>
-
     </dependencies>
-
 </project>
