--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>io.flexify</groupId>
     <artifactId>flexify-manage-api-client-sample</artifactId>
-    <version>2.6</version>
+    <version>2.7.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -18,7 +18,7 @@
         <dependency>
             <groupId>io.flexify</groupId>
             <artifactId>management-apiclient</artifactId>
-            <version>2.6</version>
+            <version>2.7.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
