--- a/java/pom.xml
+++ b/java/pom.xml
@@ -5,20 +5,20 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>io.flexify</groupId>
-    <artifactId>flexify-manage-api-client-sample</artifactId>
-    <version>2.8.5</version>
+    <artifactId>flexify-api-sample</artifactId>
+    <version>2.12.1-dev</version>
 
     <properties>
-        <maven.compiler.source>1.8</maven.compiler.source>
-        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    </properties>
+     </properties>
 
     <dependencies>
         <dependency>
             <groupId>io.flexify</groupId>
             <artifactId>management-apiclient</artifactId>
-            <version>2.8.5</version>
+            <version>2.12.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
